--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,14 +12,7 @@
     <string name="image_suffix_general">_fw320sf</string>//普通浏览的图
     <string name="image_suffix_big">_fw658</string>//大图
     <string name="image_suffix_small">_sq75sf</string>//小图
-
-    <string-array name="tab_long_Title">
-        <item>首页</item>
-        <item>应用</item>
-        <item>游戏</item>
-        <item>专题</item>
-        <item>推荐</item>
-        <item>分类</item>
-        <item>排行</item>
-    </string-array>
+    <string name="url_image_general">http://img.hb.aicdn.com/%s_fw320sf</string>
+    <string name="url_image_big">http://img.hb.aicdn.com/%s_fw658</string>
+    <string name="url_image_small">http://img.hb.aicdn.com/%s_sq75sf</string>
 </resources>
